# nl-cube

./: .gitignore  .nojekyll  CONTRIBUTING.md  Cargo.toml  README.md  architecture.html  config.toml  developer_guide.html  example_queries.txt  index.html  roadmap.html  robots.txt  search.json  sitemap.xml  technical_details.html  user_guide.html
.github/workflows/: build.yml
csvs/: orders.csv  returns.csv
docs/: _quarto.yml  architecture.qmd  developer_guide.qmd  index.qmd  roadmap.qmd  technical_details.qmd  user_guide.qmd
prompt_tests/: schema.ddl  template.txt  test1.txt  test2.txt  test3.txt  test4.txt
src/: config.rs  main.rs
src/db/: db_pool.rs  db_utils.rs  mod.rs  multi_db_pool.rs  schema_manager.rs
src/ingest/: csv.rs  mod.rs  parquet.rs  schema.rs
src/llm/: mod.rs  models.rs
src/llm/providers/: local.rs  mod.rs  ollama.rs  remote.rs
src/server/: mod.rs
src/util/: logging.rs  mod.rs
src/web/: mod.rs  routes.rs  state.rs  static_files.rs  templates.rs
src/web/handlers/: api.rs  ui.rs
static/: index.html  offline.html
static/css/: nlcube.css
static/js/: nlcube.js  offline-utils.js  perspective-utils.js  query-utils.js  register-sw.js  reports-utils.js  service-worker.js  upload-utils.js
