[package]
name = "nl-cube"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
    "set-header",
    "fs",
    "cors",
    "trace",
    "compression-br",     # For Brotli compression
    "compression-gzip",   # For Gzip compression
    "compression-deflate" # For Deflate compression
]}
hyper = { version = "1", features = ["server"] }
hyper-util = "0.1.10"
socket2 = "0.5.8"
rust-embed = "8.2"
minijinja = { version = "2.8.0", features = ["loader"] }
tokio = { version = "1.35", features = ["full"] }
duckdb = { version = "=1.1.1", features = ["bundled"] }
r2d2 = "0.8"
config = "0.15.7"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","json"] }
async-trait = "0.1.88"
reqwest = { version = "0.12.15", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3.1"
mime_guess = "2.0.5"
arrow = "53.4.0"
regex = "1.9.5"
oneshot = "0.1.11"

[profile.release]
incremental = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
